Fix for Issue #377 Creating a folder removes scrollbar

--- a/src/components/root.css
+++ b/src/components/root.css
@@ -54,6 +54,7 @@ button {
 #root {
   height: 100%;
   min-height: 100%;
+  overflow: auto;
 }
 
 .ReactModal__Body--open {
